Fix display and spacing on Netlify Deploy buttons, fixes daviddarnes/functions.netlify.com#9

--- a/src/assets/css/_typography.scss
+++ b/src/assets/css/_typography.scss
@@ -118,7 +118,18 @@ details {
 }
 
 // Custom spacing on the Playground section
-
 .page--playground h2 {
   margin-top: 3.5em;
+}
+
+// Netlify deploy button modifications
+a[href*="netlify.com/start/deploy"] {
+  display: inline-block;
+  img {
+    margin-bottom: 0;
+  }
+}
+
+p > a[href*="netlify.com/start/deploy"] {
+  margin: 1em 0;
 }
